--- a/views/pages/partials/dashnav.ejs
+++ b/views/pages/partials/dashnav.ejs
@@ -6,12 +6,12 @@
             window.location.href = '/register';
         }
 
-        // if(window.location.href.includes('nairacity.herokuapp.com')){
-        //     window.location.href = "https://www.naircity.com"
-        // }
-        if(window.location.href.includes('naircity.com')){
-            window.location.href = "/wait"
+        if(window.location.href.includes('nairacity.herokuapp.com')){
+            window.location.href = "https://www.naircity.com"
         }
+        // if(window.location.href.includes('naircity.com')){
+        //     window.location.href = "/wait"
+        // }
 
     </script>
     <a href="/"> <img src="/public/img/newLogo.png" class="h-7 md:h-10 mt-2" alt=""></a>
