--- a/views/pages/partials/navbar.ejs
+++ b/views/pages/partials/navbar.ejs
@@ -13,13 +13,13 @@
             window.location.href = '/dashboard'
         }
 
-        // if(window.location.href.includes('nairacity.herokuapp.com')){
-        //     window.location.href = "https://www.naircity.com"
-        // }
-
-        if(window.location.href.includes('naircity.com')){
-            window.location.href = "/wait"
+        if(window.location.href.includes('nairacity.herokuapp.com')){
+            window.location.href = "https://www.naircity.com"
         }
+
+        // if(window.location.href.includes('naircity.com')){
+        //     window.location.href = "/wait"
+        // }
 
     </script>
     <!-- On Mobile -->
