--- a/views/pages/partials/header.ejs
+++ b/views/pages/partials/header.ejs
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/public/styles/style.css" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<title>NairaCity</title>
 	<!-- META DESCRIPTION -->
 	<meta name="description" content="NairaCity is a trading platform that helps newbies in the stock market earn from investments without knowing how to trade, it offers everyone the opportunity of making money online and easily getting income through referrals" >
