--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -20,7 +20,7 @@
                         <thead class="text-xs text-gray-700 uppercase bg-gray-300 dark:bg-gray-700 dark:text-gray-400">
                             <tr>
                                 <th scope="col" class="px-6 py-3">
-                                    Full Name
+                                    Username
                                 </th>
                                 <th scope="col" class="px-6 py-3">
                                     Email
