making it better

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -158,7 +158,7 @@
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Referrals Balance: 
+                                        <p class="flex-1 font-semibold text-lg">Referral Balance: 
                                             <b class="refBalance">
                                                 <script>
                                                     document.querySelector(".refBalance")
