--- a/views/pages/withdraw.ejs
+++ b/views/pages/withdraw.ejs
@@ -40,6 +40,9 @@
                             
                         </script>
                         <div class="mt-10 m-5 min-h-screen">
+                            <script>
+                                const refs = JSON.parse(localStorage.getItem('ref'));
+                            </script>
                             <h1 class="ultra text-4xl text-green-500 text-center mt-12">Withdraw Funds</h1>
                             <p class="text-green-200 text-center mt-2 italic max-w-[800px] mx-auto"><b>NOTICE:</b> You can not withdraw from your trading balance until one month after registration However you can withdraw from your referral balance even if you have only NGN 1,000 and you should get your referral bonus in the bank account you provided at least 6 hours after you place withdrawal</p>
                             <div class="mb-5">
@@ -105,7 +108,6 @@
             <script src="/public/js/dashboard.js"></script>
             <script>
 
-                const refs = JSON.parse(localStorage.getItem('ref'));
                 const referrBtn = document.querySelector('.referrBtn');
                 const tradeWithdraw = document.querySelector('.tradeWithdraw');
                 const placeTradeWith = document.querySelector('.placeTradeWith');
