making it better

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -368,7 +368,7 @@
 
                                             $.ajax({
                                                 type: "PUT",
-                                                url: `${url}/user/get/${user._id}?id=${user._id}`,
+                                                url: `${url}/user/mine/${user._id}`,
                                                 // headers: { "Content-type": "application/json; charset=UTF-8" },
                                                 dataType: "json",
 
